[package]
name = "boeing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "51.0.0" 
arrow-json = "51.0.0"
arrow-flight = { version = "51.0.0", features = ["anyhow", "tls"] }
tonic = {version = "0.11.0", features = ["tls" , "transport", "gzip", "zstd"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.198"
serde_json = "1.0.116"
futures = { version = "0.3.30", features = ["futures-executor"] }
chrono = "0.4.38"
humantime = "2.1.0"
arrow-ipc = { version = "51.0.0", features = ["zstd"] }
